n900-l10n-uk (1:20119999+1228) fremantle; urgency=low

  * Updated translations
  * skype translation contributed by Dmitriy Mikheenko

 -- Євгеній Мещеряков <eugen@debian.org>  Wed, 28 Dec 2011 14:44:23 +0100

n900-l10n-uk (1:20119999+0211) fremantle; urgency=low

  * Updated translation.
  * Try to work around broken epoch support on maemo.org.

 -- Євгеній Мещеряков <eugen@debian.org>  Fri, 11 Feb 2011 17:10:34 +0100

n900-l10n-uk (1:20110131) fremantle; urgency=low

  * Fix version numbering
  * Convert source po files to more editable format
  * Update translations

 -- Євгеній Мещеряков <eugen@debian.org>  Mon, 31 Jan 2011 16:55:32 +0100

n900-l10n-uk (20113001) fremantle; urgency=low

  * Initial release

 -- Євгеній Мещеряков <eugen@debian.org>  Sun, 30 Jan 2011 18:44:43 +0100